Fix css on firefox and remove console log statement

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -7,7 +7,6 @@ body {
     position: relative;
     width: 50%;
     margin: 40px 25% 0 25%;
-
     padding:20px;
     background-color: ivory;
 }
@@ -35,6 +34,6 @@ span {
     color: blue;
 }
 .footer {
-    text-align: -webkit-center;
+    text-align: center;
     margin-top: 100px;
 }
